--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 		-->
     <script
       type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=&libraries=places"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDF0y5jS4Xu7DPVCXuA93ybUcKePgLbDSk&libraries=places"
     ></script>
     <title>Find Your Groceries</title>
   </head>
